--- a/Project.toml
+++ b/Project.toml
@@ -1,13 +1,10 @@
 name = "Republic"
 uuid = "27243419-9dde-4721-b67c-fd63626fea7f"
 authors = ["AntonOresten <antonoresten@proton.me> and contributors"]
-version = "1.0.0-DEV"
+version = "0.0.1"
+
+[workspace]
+projects = ["test"]
 
 [compat]
 julia = "1.11"
-
-[extras]
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-
-[targets]
-test = ["Test"]
