--- a/.github/workflows/TagBot.yml
+++ b/.github/workflows/TagBot.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: JuliaRegistries/TagBot@v1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.TAGBOT_PAT }}
           # For commits that modify workflow files: SSH key enables tagging, but
           # releases require manual creation. For full automation of such commits,
           # use a PAT with `workflow` scope instead of GITHUB_TOKEN.
