--- a/.github/workflows/TagBot.yml
+++ b/.github/workflows/TagBot.yml
@@ -8,10 +8,13 @@ jobs:
   TagBot:
     if: github.event_name == 'workflow_dispatch' || github.actor == 'JuliaTagBot' || github.actor == 'AntonOresten'
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      issues: read
     steps:
       - uses: JuliaRegistries/TagBot@v1
         with:
-          token: ${{ secrets.TAGBOT_PAT }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           # For commits that modify workflow files: SSH key enables tagging, but
           # releases require manual creation. For full automation of such commits,
           # use a PAT with `workflow` scope instead of GITHUB_TOKEN.
