--- a/.github/workflows/TagBot.yml
+++ b/.github/workflows/TagBot.yml
@@ -8,13 +8,18 @@ jobs:
   TagBot:
     if: github.event_name == 'workflow_dispatch' || github.actor == 'JuliaTagBot' || github.actor == 'AntonOresten'
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      issues: read
     steps:
+      - name: Debug token
+        run: |
+          curl -s -o /dev/null -w "Status: %{http_code}\nScopes: %{header.x-oauth-scopes}\n" \
+            -H "Authorization: token $TOKEN" \
+            -X POST https://api.github.com/repos/MurrellGroup/Republic.jl/releases \
+            -d '{"tag_name":"v0.0.1-debug","name":"debug","body":"debug"}'
+        env:
+          TOKEN: ${{ secrets.TAGBOT_PAT }}
       - uses: JuliaRegistries/TagBot@v1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.TAGBOT_PAT }}
           # For commits that modify workflow files: SSH key enables tagging, but
           # releases require manual creation. For full automation of such commits,
           # use a PAT with `workflow` scope instead of GITHUB_TOKEN.
